@@ -66,6 +66,7 @@ public:
 
   void run();
   bool running();
+  bool restarting();
   void shutdown();
 
   CEGUI::OgreRenderer* getOgreRenderer()const;
@@ -102,6 +103,8 @@ private:
 
   Ogre::String mResourcesCfg;
   bool mShutdown;
+  bool mRestart; //!< Used to reconfigure Ogre (i.e. for fullscreen
+  bool mToFullscreen; //!< Will reconfigure Ogre with this state
   Ogre::SceneManager* mSceneMgr;
 
   CEGUI::GUIContext* mContext;
